# bankr-sdk-rs

./: Cargo.toml  Justfile  README.md  cliff.toml  context7.json
.github/workflows/: release.yml
crates/bankr-agent-api/: Cargo.toml
crates/bankr-agent-api/src/: client.rs  error.rs  lib.rs  types.rs
docs/agent-api/: access-control.md  authentication.md  index.md  job-management.md  overview.md  prompt-endpoint.md  sign-endpoint.md  submit-endpoint.md  transaction-types.md  user-info.md
specs/2026-02-21-01-bankr-agent-api-sdk/: design.md  tasks.md
specs/2026-02-21-02-cli-full-commands/: design.md  tasks.md
